deploy/openshift/agent-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: unf-agent
  namespace: unf-system
spec:
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: agent
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - BPF
                - NET_ADMIN
                - PERFMON
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsUser: 0
            seLinuxOptions:
              type: spc_t
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: internal-ca
          configMap:
            name: unf-internal-ca
            defaultMode: 0444
            items:
              - key: service-ca.crt
                path: ca.crt
