deploy/openshift/service-ca-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: unf-controller
  namespace: unf-system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: unf-internal-tls
